feat(java): remove Unsafe for jdk25